<resources>
    <string name="app_name">PiliDemo</string>

    <string name="guide_start">进入新世界</string>

    <!-- home -->

    <string name="tip_restart_app">此操作将重新启动应用程序！</string>
    <string name="switch_to_day_mode">白间模式</string>
    <string name="switch_to_night_mode">夜间模式</string>

    <!--  Navigation Drawer -->
    <string name="home_drawer_open">Open drawer</string>
    <string name="home_drawer_close">Close drawer</string>
    <string name="not_logged_in">未登录</string>
    <string name="vip_limit">会员</string>
    <string name="home_page">首页</string>
    <string name="my_vip">我的会员</string>
    <string name="off_line_download">离线缓存</string>
    <string name="my_collect">我的收藏</string>
    <string name="history_record">历史记录</string>
    <string name="friends">关注的人</string>
    <string name="my_purse">我的钱包</string>
    <string name="settings">设置与帮助</string>
    <string name="recommend">应用推荐</string>
    <string name="theme_choose">主题选择</string>
    <string name="default_limit">Lv0</string>
    <string name="default_coin">硬币：0</string>

    <!-- common -->
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="toolbar_search">搜索</string>
    <string name="toolbar_download">下载</string>
    <string name="toolbar_game">游戏中心</string>
    <string name="toolbar_clear">清空</string>
    <string name="cancel">取消</string>
    <string name="next">下一步</string>
    <string name="skip_error">数据有误...即将退出...</string>

    <!-- login in -->
    <string name="login_toolbar_title">登录</string>
    <string name="login_in">登录</string>
    <string name="login_accounts">注册帐号</string>
    <string name="user_account">你的手机号/邮箱</string>
    <string name="user_password">请输入密码</string>
    <string name="toolbar_forget">忘记密码?</string>
    <string name="opt_logining">登录中...</string>
    <string name="opt_doing">正在操作...请稍后...</string>

    <!-- register account -->
    <string name="register_toolbar_name">注册帐号</string>
    <string name="register_input_phone">请确认你的国家或地区并输入手机号</string>
    <string name="register_default_area">中国大陆</string>
    <string name="register_default_area_code">+86</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_agreement">点击\"获取验证码\"按钮，即表示同意注册协议</string>

    <!-- proof code  -->
    <string name="proof_code_toolbar_name">验证手机号</string>
    <string name="proof_rules_tip">验证码已发送到以下手机，请在5分钟内完成注册</string>
    <string name="proof_input_code">请输入验证码</string>

    <!-- set password/userInfo-->
    <string name="set_password_tip">设置密码后，你就可以使用手机登录bilibili</string>
    <string name="set_password_psw">密码</string>
    <string name="set_password_psw_hint">6-16个字符以内，区分大小写</string>
    <string name="set_password_confirm_psw">确认密码</string>
    <string name="set_password_confirm_psw_hint">请再次输入</string>
    <string name="set_password_name">昵称</string>
    <string name="set_password_name_hint">3-30个字符以内</string>
    <string name="complete">完成</string>
    <string name="set_password_toolbar_name">设置密码</string>


</resources>
