<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_game"
        android:icon="@drawable/ic_menu_top_game_center"
        android:orderInCategory="80"
        android:title="@string/toolbar_game"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_toolbar_menu_download"
        android:orderInCategory="90"
        android:title="@string/toolbar_download"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_toolbar_menu_search"
        android:orderInCategory="100"
        android:title="@string/toolbar_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="110"
        android:title="@string/toolbar_clear"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>