<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/ToolbarTheme.Menu"
        app:titleTextAppearance="@style/ToolbarTheme.TextLay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color_one"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/hint_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/set_password_tip"
            android:textColor="@color/black_tf_3d" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/set_password_psw"
                android:textColor="@color/black_tf_3d" />

            <EditText
                android:id="@+id/first_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/set_password_psw_hint"
                android:inputType="textPassword"
                android:maxEms="16"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textColor="@color/black_tf_3d"
                android:textColorHint="@color/hint_tip_grey"
                android:textCursorDrawable="@drawable/cursor_grey_bg"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:background="@color/under_grey_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/set_password_confirm_psw"
                android:textColor="@color/black_tf_3d" />

            <EditText
                android:id="@+id/second_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/set_password_confirm_psw_hint"
                android:inputType="textPassword"
                android:maxEms="16"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textColor="@color/black_tf_3d"
                android:textColorHint="@color/hint_tip_grey"
                android:textCursorDrawable="@drawable/cursor_grey_bg"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:background="@color/under_grey_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/set_password_name"
                android:textColor="@color/black_tf_3d" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/set_password_name_hint"
                android:maxEms="30"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textColor="@color/black_tf_3d"
                android:textColorHint="@color/hint_tip_grey"
                android:textCursorDrawable="@drawable/cursor_grey_bg"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:background="@color/under_grey_line" />

        <Button
            android:id="@+id/item_complete"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_raw_theme_selector"
            android:text="@string/complete"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>