<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@color/theme_color"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="20dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/nav_header_avatar"
        style="@style/FrescoAccountStyle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <ImageView
        android:id="@+id/nav_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/nav_switch_pattern"
        android:src="@drawable/ic_navigation_header_notification" />

    <ImageView
        android:id="@+id/nav_switch_pattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:src="@drawable/ic_switch_daily" />

    <LinearLayout
        android:id="@+id/nav_header_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nav_header_avatar"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nav_header_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_logged_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nav_vip_limit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/frame_white_3raw_1dp"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/default_limit"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/nav_header_vip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nav_header_layout"
        android:layout_marginTop="3dp"
        android:background="@drawable/frame_white_full_3raw_1dp"
        android:paddingBottom="2dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="2dp"
        android:text="@string/vip_limit"
        android:textColor="@color/theme_color"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/nav_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nav_header_vip"
        android:layout_marginTop="3dp"
        android:text="@string/default_coin"
        android:textColor="@color/white"
        android:textSize="12sp" />


</RelativeLayout>